--- a/tubesMK2.uplugin
+++ b/tubesMK2.uplugin
@@ -1,8 +1,8 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "1.0.0",
-	"FriendlyName": "BetterHupertubes",
+	"VersionName": "1.0.1",
+	"FriendlyName": "BetterHypertubes",
 	"Description": "",
 	"Category": "Modding",
 	"CreatedBy": "BBob",
@@ -18,9 +18,9 @@
 		{
 			"Name": "SML",
 			"Enabled": true,
-			"SemVersion": "^3.10.0"
+			"SemVersion": "^3.11.0"
 		}
 	],
-	"SemVersion": "1.0.0",
-	"GameVersion": ">=383729"
+	"SemVersion": "1.0.1",
+	"GameVersion": ">=410840"
 }
